--- a/ReRunStepFunctions/reRunStepFunctions.ipynb
+++ b/ReRunStepFunctions/reRunStepFunctions.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "import datetime\n",
     "from dateutil import tz\n",
+    "import sys\n",
     "\n",
     "# Set up boto3 client for Step Functions\n",
     "stepfunctions = boto3.client('stepfunctions')\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +60,36 @@
     "\n",
     "def list_supplier_executions(state_machine_arn, supplier_id, start_time, end_time):\n",
     "    print(f\"[INFO] Listing executions for supplier '{supplier_id}' between {start_time} and {end_time}...\")\n",
+    "\n",
     "    executions = []\n",
     "    paginator = stepfunctions.get_paginator('list_executions')\n",
     "    total_scanned = 0\n",
     "    matched_count = 0\n",
-    "    for page in paginator.paginate(stateMachineArn=state_machine_arn, statusFilter='SUCCEEDED'):\n",
+    "\n",
+    "    for page in paginator.paginate(stateMachineArn=state_machine_arn):\n",
     "        for exe in page['executions']:\n",
     "            total_scanned += 1\n",
+    "\n",
+    "            # Stop if execution is older than the start time (pagination is in DESC order)\n",
+    "            if exe['startDate'] < start_time:\n",
+    "                print(\"\\n[INFO] Reached older executions. Stopping pagination.\")\n",
+    "                print(f\"[INFO] Total executions scanned: {total_scanned}\")\n",
+    "                print(f\"[INFO] Matching executions found: {matched_count}\")\n",
+    "                return executions\n",
+    "\n",
+    "            # Show live scan progress on one line\n",
+    "            sys.stdout.write(f\"\\r[SCAN] Scanned: {total_scanned} | Matches: {matched_count}\")\n",
+    "            sys.stdout.flush()\n",
+    "\n",
     "            if supplier_id in exe['name'] and start_time <= exe['startDate'] <= end_time:\n",
     "                matched_count += 1\n",
-    "                print(f\"  [MATCH {matched_count}] Name: {exe['name']}, Start: {exe['startDate']}\")\n",
     "                executions.append(exe)\n",
+    "\n",
+    "    print()  # newline after progress bar\n",
     "    print(f\"[INFO] Total executions scanned: {total_scanned}\")\n",
     "    print(f\"[INFO] Matching executions found: {matched_count}\")\n",
     "    return executions\n",
+    "\n",
     "\n",
     "def get_execution_input(execution_arn):\n",
     "    print(f\"[INFO] Fetching input for execution ARN: {execution_arn}\")\n",
@@ -81,21 +98,29 @@
     "\n",
     "def start_retry_executions(executions, state_machine_arn):\n",
     "    print(f\"[INFO] Retrying {len(executions)} executions...\")\n",
+    "\n",
     "    for i, exe in enumerate(executions, 1):\n",
     "        new_name = f\"{exe['name']}-Retry\"\n",
-    "        input_data = get_execution_input(exe['executionArn'])\n",
-    "        print(f\"[{i}/{len(executions)}] Starting retry: {new_name}\")\n",
+    "        print(f\"[{i}/{len(executions)}] Preparing to retry: {new_name}\")\n",
+    "\n",
     "        try:\n",
+    "            print(f\"[{i}] Fetching input for {exe['executionArn']}...\")\n",
+    "            input_data = get_execution_input(exe['executionArn'])\n",
+    "            print(f\"[{i}] Input fetched. Starting retry...\")\n",
+    "\n",
     "            stepfunctions.start_execution(\n",
     "                stateMachineArn=state_machine_arn,\n",
-    "                name=new_name[:80],\n",
+    "                name=new_name[:80],  # Trim if over AWS limit\n",
     "                input=input_data\n",
     "            )\n",
-    "            print(f\"    ✅ Success: {new_name}\")\n",
+    "\n",
+    "            print(f\"[{i}] ✅ Retry started: {new_name}\")\n",
+    "\n",
     "        except stepfunctions.exceptions.ExecutionAlreadyExists as e:\n",
-    "            print(f\"    ⚠️ Skipped (already exists): {new_name}\")\n",
+    "            print(f\"[{i}] ⚠️ Skipped (already exists): {new_name}\")\n",
     "        except Exception as e:\n",
-    "            print(f\"    ❌ Error: {e}\")\n"
+    "            print(f\"[{i}] ❌ Error starting execution {new_name}: {e}\")\n",
+    "\n"
    ]
   },
   {
@@ -107,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -117,15 +142,58 @@
       "[INFO] Script started.\n",
       "[INFO] Looking up state machine ARN for 'RAPISAMStateMachine-1YwcU3XmIcZ5'...\n",
       "[INFO] Found ARN: arn:aws:states:us-east-1:389633136494:stateMachine:RAPISAMStateMachine-1YwcU3XmIcZ5\n",
-      "[INFO] Listing executions for supplier 'MACKIE' between 2025-05-27 14:00:00+00:00 and 2025-05-28 13:17:28.101616+00:00...\n",
-      "  [MATCH 1] Name: MACKIE_005140_251482813091331_20250528111011.492, Start: 2025-05-28 13:10:17.641000+02:00\n",
-      "  [MATCH 2] Name: MACKIE_100179_251482812452479_20250528104510.1689, Start: 2025-05-28 12:45:48.304000+02:00\n",
-      "  [MATCH 3] Name: MACKIE_002239_251482812270921_20250528102810.8824, Start: 2025-05-28 12:28:17.023000+02:00\n",
-      "  [MATCH 4] Name: MACKIE_100179_251482812233775_20250528102410.786, Start: 2025-05-28 12:24:08.940000+02:00\n",
-      "  [MATCH 5] Name: MACKIE_008111_251482810350830_20250528083608.4542, Start: 2025-05-28 10:36:13.590000+02:00\n",
-      "  [MATCH 6] Name: MACKIE_004442_251482809262353_20250528072607.7895, Start: 2025-05-28 09:26:31.960000+02:00\n",
-      "  [MATCH 7] Name: MACKIE_233282416000726_251472717545942_20250527155515.6773, Start: 2025-05-27 17:55:49.853000+02:00\n",
-      "  [MATCH 8] Name: MACKIE_243521708210577_251472717340712_20250527153415.901, Start: 2025-05-27 17:34:53.050000+02:00\n"
+      "[INFO] Listing executions for supplier 'MACKIE' between 2025-05-27 14:00:00+00:00 and 2025-05-28 13:47:50.630194+00:00...\n",
+      "[SCAN] Scanned: 5736 | Matches: 9\n",
+      "[INFO] Reached older executions. Stopping pagination.\n",
+      "[INFO] Total executions scanned: 5737\n",
+      "[INFO] Matching executions found: 9\n",
+      "[INFO] Retrying 9 executions...\n",
+      "[1/9] Preparing to retry: MACKIE_005536_251482815380696_20250528133813.7036-Retry\n",
+      "[1] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_005536_251482815380696_20250528133813.7036...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_005536_251482815380696_20250528133813.7036\n",
+      "[1] Input fetched. Starting retry...\n",
+      "[1] ✅ Retry started: MACKIE_005536_251482815380696_20250528133813.7036-Retry\n",
+      "[2/9] Preparing to retry: MACKIE_005140_251482813091331_20250528111011.492-Retry\n",
+      "[2] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_005140_251482813091331_20250528111011.492...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_005140_251482813091331_20250528111011.492\n",
+      "[2] Input fetched. Starting retry...\n",
+      "[2] ✅ Retry started: MACKIE_005140_251482813091331_20250528111011.492-Retry\n",
+      "[3/9] Preparing to retry: MACKIE_100179_251482812452479_20250528104510.1689-Retry\n",
+      "[3] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_100179_251482812452479_20250528104510.1689...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_100179_251482812452479_20250528104510.1689\n",
+      "[3] Input fetched. Starting retry...\n",
+      "[3] ✅ Retry started: MACKIE_100179_251482812452479_20250528104510.1689-Retry\n",
+      "[4/9] Preparing to retry: MACKIE_002239_251482812270921_20250528102810.8824-Retry\n",
+      "[4] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_002239_251482812270921_20250528102810.8824...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_002239_251482812270921_20250528102810.8824\n",
+      "[4] Input fetched. Starting retry...\n",
+      "[4] ✅ Retry started: MACKIE_002239_251482812270921_20250528102810.8824-Retry\n",
+      "[5/9] Preparing to retry: MACKIE_100179_251482812233775_20250528102410.786-Retry\n",
+      "[5] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_100179_251482812233775_20250528102410.786...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_100179_251482812233775_20250528102410.786\n",
+      "[5] Input fetched. Starting retry...\n",
+      "[5] ✅ Retry started: MACKIE_100179_251482812233775_20250528102410.786-Retry\n",
+      "[6/9] Preparing to retry: MACKIE_008111_251482810350830_20250528083608.4542-Retry\n",
+      "[6] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_008111_251482810350830_20250528083608.4542...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_008111_251482810350830_20250528083608.4542\n",
+      "[6] Input fetched. Starting retry...\n",
+      "[6] ✅ Retry started: MACKIE_008111_251482810350830_20250528083608.4542-Retry\n",
+      "[7/9] Preparing to retry: MACKIE_004442_251482809262353_20250528072607.7895-Retry\n",
+      "[7] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_004442_251482809262353_20250528072607.7895...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_004442_251482809262353_20250528072607.7895\n",
+      "[7] Input fetched. Starting retry...\n",
+      "[7] ✅ Retry started: MACKIE_004442_251482809262353_20250528072607.7895-Retry\n",
+      "[8/9] Preparing to retry: MACKIE_233282416000726_251472717545942_20250527155515.6773-Retry\n",
+      "[8] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_233282416000726_251472717545942_20250527155515.6773...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_233282416000726_251472717545942_20250527155515.6773\n",
+      "[8] Input fetched. Starting retry...\n",
+      "[8] ✅ Retry started: MACKIE_233282416000726_251472717545942_20250527155515.6773-Retry\n",
+      "[9/9] Preparing to retry: MACKIE_243521708210577_251472717340712_20250527153415.901-Retry\n",
+      "[9] Fetching input for arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_243521708210577_251472717340712_20250527153415.901...\n",
+      "[INFO] Fetching input for execution ARN: arn:aws:states:us-east-1:389633136494:execution:RAPISAMStateMachine-1YwcU3XmIcZ5:MACKIE_243521708210577_251472717340712_20250527153415.901\n",
+      "[9] Input fetched. Starting retry...\n",
+      "[9] ✅ Retry started: MACKIE_243521708210577_251472717340712_20250527153415.901-Retry\n",
+      "[INFO] Script finished.\n"
      ]
     }
    ],
