--- a/CountStepFunctionsExecutions/countStepFunctionsExecutions.ipynb
+++ b/CountStepFunctionsExecutions/countStepFunctionsExecutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
     "\n",
     "# Constants\n",
     "STATE_MACHINE_NAME = \"RAPISAMStateMachine-1YwcU3XmIcZ5\"\n",
-    "SUPPLIER_ID = \"MACKIE\"\n",
-    "START_TIME_UTC = datetime.datetime(2025, 5, 27, 14, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "SUPPLIER_ID = \"SAGREETINGS\"\n",
+    "START_TIME_UTC = datetime.datetime(2025, 5, 27, 14, 0, 0, tzinfo=datetime.timezone.utc) # Change this to the start time you want to start from\n",
     "NOW_UTC = datetime.datetime.utcnow().replace(tzinfo=datetime.timezone.utc)"
    ]
   },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,38 +88,14 @@
     "    print()  # newline after progress bar\n",
     "    print(f\"[INFO] Total executions scanned: {total_scanned}\")\n",
     "    print(f\"[INFO] Matching executions found: {matched_count}\")\n",
-    "    return executions\n",
+    "    # return executions\n",
+    "    return print(\"Scanned: {total_scanned} | Matches: {matched_count}\")\n",
     "\n",
     "\n",
     "def get_execution_input(execution_arn):\n",
     "    print(f\"[INFO] Fetching input for execution ARN: {execution_arn}\")\n",
     "    response = stepfunctions.describe_execution(executionArn=execution_arn)\n",
     "    return response['input']\n",
-    "\n",
-    "def start_retry_executions(executions, state_machine_arn):\n",
-    "    print(f\"[INFO] Retrying {len(executions)} executions...\")\n",
-    "\n",
-    "    for i, exe in enumerate(executions, 1):\n",
-    "        new_name = f\"{exe['name']}-Retry\"\n",
-    "        print(f\"[{i}/{len(executions)}] Preparing to retry: {new_name}\")\n",
-    "\n",
-    "        try:\n",
-    "            print(f\"[{i}] Fetching input for {exe['executionArn']}...\")\n",
-    "            input_data = get_execution_input(exe['executionArn'])\n",
-    "            print(f\"[{i}] Input fetched. Starting retry...\")\n",
-    "\n",
-    "            stepfunctions.start_execution(\n",
-    "                stateMachineArn=state_machine_arn,\n",
-    "                name=new_name[:80],  # Trim if over AWS limit\n",
-    "                input=input_data\n",
-    "            )\n",
-    "\n",
-    "            print(f\"[{i}] ✅ Retry started: {new_name}\")\n",
-    "\n",
-    "        except stepfunctions.exceptions.ExecutionAlreadyExists as e:\n",
-    "            print(f\"[{i}] ⚠️ Skipped (already exists): {new_name}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"[{i}] ❌ Error starting execution {new_name}: {e}\")\n",
     "\n"
    ]
   },
@@ -148,7 +124,6 @@
     "            print(\"[INFO] No matching executions found. Exiting.\")\n",
     "            return\n",
     "\n",
-    "        start_retry_executions(executions, state_machine_arn)\n",
     "    except Exception as e:\n",
     "        print(f\"[ERROR] {e}\")\n",
     "\n",
