Edited the generate json code to be generic

--- a/GenerateJson/generateJson.ipynb
+++ b/GenerateJson/generateJson.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate A big JSON : "
+    "# Generate a sample JSON : "
    ]
   },
   {
@@ -16,111 +16,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import random\n",
     "from faker import Faker\n",
+    "from datetime import datetime\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "import os\n",
     "\n",
-    "fake = Faker()\n",
-    "\n",
-    "# Create a list to store the objects\n",
-    "data = []\n",
-    "used_pricelists = set()  # Keep track of used PriceList values\n",
-    "\n",
-    "# Amount of Objects\n",
-    "num = 122"
+    "fake = Faker()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the bulk json : \n"
+    "### Upload Sample JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JSON file with  122  objects created.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for _ in range(num):\n",
-    "    product_id = fake.uuid4().replace(\"-\", \"\")  # Generate a random ProductID\n",
-    "    from_date = fake.date_time_this_decade().isoformat() + \"Z\"\n",
-    "    to_date = \"9999-12-31T00:00:00Z\"\n",
-    "    \n",
-    "    # Generate a unique random PriceList value\n",
-    "    while True:\n",
-    "        pricelist = str(random.randint(1, 500))\n",
-    "        if pricelist not in used_pricelists:\n",
-    "            used_pricelists.add(pricelist)\n",
-    "            break\n",
-    "    \n",
-    "    user_id = fake.bothify(text=\"??########\")  # Randomized UserID (e.g., \"AB12345678\")\n",
+    "upload = widgets.FileUpload(accept=\".json\", multiple=False)\n",
+    "display(widgets.HTML(\"<b>Upload a sample JSON file:</b>\"))\n",
+    "display(upload)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Input Widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "supplier_input = widgets.Text(description='SupplierID:', placeholder='Enter SupplierID')\n",
+    "count_input = widgets.IntText(description='Count:', value=50)\n",
+    "generate_btn = widgets.Button(description=\"Generate Data\", button_style=\"success\")\n",
     "\n",
-    "    obj = {\n",
-    "        \"AllCustomers\": False,\n",
-    "        \"Vendor\": None,\n",
-    "        \"Userfield01\": None,\n",
-    "        \"LastLoginDate\": \"0001-01-01T00:00:00Z\",\n",
-    "        \"IsAdmin\": False,\n",
-    "        \"CanOrder\": False,\n",
-    "        \"Manager\": None,\n",
-    "        \"WeeklySummary\": False,\n",
-    "        \"RepID\": user_id,\n",
-    "        \"AddressID\": 0,\n",
-    "        \"FailedPasswordAttemptCount\": 0,\n",
-    "        \"SocialLogin\": 0.0,\n",
-    "        \"IsManager\": False,\n",
-    "        \"AllInArea\": True,\n",
-    "        \"Deleted\": False,\n",
-    "        \"Tel\": None,\n",
-    "        \"Name\": f\"{user_id} DRIVER\",  # Randomized UserID reflected in the name\n",
-    "        \"Role\": \"OFFLOAD,REPL,POD,DS,REQ,GRV\",\n",
-    "        \"DefaultBranchID\": \"6141\",\n",
-    "        \"Country\": None,\n",
-    "        \"MonthlyKPI\": False,\n",
-    "        \"DefaultAreaID\": \"ZABW00\",\n",
-    "        \"PasswordSalt\": \"OFFLOAD,REPL,POD,DS,REQ,GRV\",\n",
-    "        \"DailySummary\": False,\n",
-    "        \"IsLockedOut\": False,\n",
-    "        \"Email\": None,\n",
-    "        \"UserID\": user_id,  # Randomized UserID\n",
-    "        \"SupplierID\": \"PEPSICO-PRO\",\n",
-    "        \"AllInBranch\": False,\n",
-    "        \"AcceptTC\": False,\n",
-    "        \"DefaultWarehouseID\": None,\n",
-    "        \"SupplierIDUserID\": None,\n",
-    "        \"IsRep\": False,\n",
-    "        \"PasswordHash\": \"password\",\n",
-    "        \"Version\": None,\n",
-    "        \"Password\": None,\n",
-    "        \"Count\": 0.0\n",
-    "    }\n",
-    "    data.append(obj)\n",
+    "output_box = widgets.Output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate fake values based on json inputed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def infer_generator(key, value):\n",
+    "    \"\"\"Infer a generator based on value type.\"\"\"\n",
+    "    if key.lower() == \"supplierid\":\n",
+    "        return None  # will be set manually\n",
+    "    if isinstance(value, str):\n",
+    "        if \"@\" in value:\n",
+    "            return lambda: fake.email()\n",
+    "        elif value.isdigit():\n",
+    "            return lambda: fake.random_number(digits=len(value))\n",
+    "        elif \"-\" in value and \":\" in value:\n",
+    "            return lambda: fake.date_time_between(start_date=\"-10y\", end_date=\"now\").isoformat() + \"Z\"\n",
+    "        elif len(value) < 10:\n",
+    "            return lambda: fake.word().upper()\n",
+    "        else:\n",
+    "            return lambda: fake.text(max_nb_chars=len(value))\n",
+    "    elif isinstance(value, float):\n",
+    "        return lambda: round(random.uniform(0.5 * value, 1.5 * value), 2)\n",
+    "    elif isinstance(value, int):\n",
+    "        return lambda: random.randint(int(0.5 * value), int(1.5 * value))\n",
+    "    elif isinstance(value, bool):\n",
+    "        return lambda: random.choice([True, False])\n",
+    "    else:\n",
+    "        return lambda: None\n",
     "\n",
-    "# Save the data to a JSON file\n",
-    "with open(\"output.json\", \"w\") as json_file:\n",
-    "    json.dump(data, json_file, indent=4)\n",
+    "def generate_data(sample_obj, count, supplier_id):\n",
+    "    def recursive_generate(sample):\n",
+    "        if isinstance(sample, dict):\n",
+    "            result = {}\n",
+    "            for key, val in sample.items():\n",
+    "                if key == \"SupplierID\":\n",
+    "                    result[key] = supplier_id\n",
+    "                elif isinstance(val, dict):\n",
+    "                    result[key] = recursive_generate(val)\n",
+    "                elif isinstance(val, list):\n",
+    "                    if val and isinstance(val[0], dict):\n",
+    "                        # Generate random number of items (e.g. 1 to 5) per list\n",
+    "                        result[key] = [recursive_generate(item) for item in val]\n",
+    "                    else:\n",
+    "                        result[key] = val  # Leave as is if not list of dicts\n",
+    "                else:\n",
+    "                    gen = infer_generator(key, val)\n",
+    "                    result[key] = gen() if gen else val\n",
+    "            return result\n",
+    "        return sample\n",
     "\n",
-    "print(\"JSON file with \", num , \" objects created.\")"
+    "    return [recursive_generate(sample_obj) for _ in range(count)]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_upload_file_content(upload_widget):\n",
+    "    val = upload_widget.value\n",
+    "    with output_box:\n",
+    "        print(\"Inside get_upload_file_content, value type:\", type(val))\n",
+    "        print(\"Value content preview:\", str(val)[:500])\n",
+    "    if not val:\n",
+    "        return None\n",
+    "\n",
+    "    try:\n",
+    "        # ipywidgets >= 8 returns a dict; older versions may return a tuple\n",
+    "        upload_item = next(iter(val.values())) if isinstance(val, dict) else val[0]\n",
+    "        mem_view = upload_item.get('content')\n",
+    "        if mem_view:\n",
+    "            return mem_view.tobytes()\n",
+    "    except Exception as e:\n",
+    "        with output_box:\n",
+    "            print(\"❌ Error accessing uploaded file content:\", e)\n",
+    "\n",
+    "    with output_box:\n",
+    "        print(\"Unknown upload.value format\")\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On Click Generate \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_generate_clicked(b):\n",
+    "    output_box.clear_output()\n",
+    "\n",
+    "    if not upload.value:\n",
+    "        with output_box:\n",
+    "            print(\"❌ Please upload a sample JSON file first.\")\n",
+    "        return\n",
+    "\n",
+    "    try:\n",
+    "        raw = get_upload_file_content(upload)\n",
+    "        text = raw.decode('utf-8')\n",
+    "        try:\n",
+    "            sample = json.loads(text)\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            with output_box:\n",
+    "                print(\"Standard JSON failed, trying JSON lines. Error:\", e)\n",
+    "            sample = []\n",
+    "            for i, line in enumerate(text.splitlines()):\n",
+    "                if line.strip():\n",
+    "                    try:\n",
+    "                        sample.append(json.loads(line))\n",
+    "                    except Exception as line_e:\n",
+    "                        with output_box:\n",
+    "                            print(f\"Line {i+1} failed: {line_e}\")\n",
+    "            if not sample:\n",
+    "                with output_box:\n",
+    "                    print(\"❌ No valid JSON objects found in file.\")\n",
+    "                return\n",
+    "        sample_obj = sample[0] if isinstance(sample, list) else sample\n",
+    "    except Exception as e:\n",
+    "        with output_box:\n",
+    "            print(f\"❌ Failed to parse sample file: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    supplier_id = supplier_input.value.strip()\n",
+    "    count = count_input.value\n",
+    "\n",
+    "    if not supplier_id:\n",
+    "        with output_box:\n",
+    "            print(\"❌ SupplierID is required.\")\n",
+    "        return\n",
+    "\n",
+    "    generated = generate_data(sample_obj, count, supplier_id)\n",
+    "\n",
+    "    with output_box:\n",
+    "        print(f\"✅ Generated {count} records with SupplierID: {supplier_id}\")\n",
+    "        display(generated[:3])  # Show a sample preview\n",
+    "\n",
+    "        filename = f\"generated_{supplier_id}_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
+    "        filepath = os.path.join(os.getcwd(), filename)\n",
+    "\n",
+    "        with open(filepath, \"w\") as f:\n",
+    "            json.dump(generated, f, indent=4)\n",
+    "\n",
+    "        with output_box:\n",
+    "            print(f\"📁 File saved as: {filepath}\")\n",
+    "\n",
+    "# Attach the event handler to the button\n",
+    "generate_btn.on_click(on_generate_clicked)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display Widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(widgets.HTML(\"<b>Enter SupplierID and Number of Records:</b>\"))\n",
+    "display(supplier_input, count_input, generate_btn, output_box)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
