--- a/CountDynamoDB/countDynamoDB.ipynb
+++ b/CountDynamoDB/countDynamoDB.ipynb
@@ -13,7 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3"
+    "import boto3\n",
+    "from boto3.dynamodb.conditions import Key, Attr\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output"
    ]
   },
   {
@@ -29,22 +32,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize a session using Amazon DynamoDB with default AWS CLI credentials\n",
-    "session = boto3.Session(profile_name='musarisaas')\n",
     "\n",
-    "# Initialize DynamoDB resource\n",
-    "dynamodb = session.resource('dynamodb')\n",
-    "\n",
-    "# Specify the table name\n",
-    "table_name = 'CoreUser'\n",
-    "\n",
-    "# Initialize the table\n",
-    "table = dynamodb.Table(table_name)\n",
-    "\n",
-    "# Define the query parameters\n",
-    "partition_key = 'PEPSICO-PRE'\n",
-    "# sort_key_condition = '2024'  # The condition that the sort key begins with\n",
-    "# filter_expression = boto3.dynamodb.conditions.Attr('Version').begins_with(sort_key_condition)\n"
+    "# Widgets for user inputs\n",
+    "profile_input = widgets.Text(description=\"AWS Profile:\", placeholder=\"e.g., musarisaas\")\n",
+    "table_input = widgets.Text(description=\"Table Name:\", placeholder=\"e.g., CoreUser\")\n",
+    "partition_key_input = widgets.Text(description=\"Partition Key:\", placeholder=\"e.g., PEPSICO-PRE\")\n",
+    "sort_key_prefix_input = widgets.Text(description=\"Sort Key Prefix (optional):\", placeholder=\"e.g., 2024\")\n",
+    "run_button = widgets.Button(description=\"Run Query\", button_style=\"success\")\n",
+    "output = widgets.Output()"
    ]
   },
   {
@@ -58,49 +53,77 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of records: 87\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Initialize variables for pagination\n",
-    "record_count = 0\n",
-    "last_evaluated_key = None\n",
+    "def run_query(b):\n",
+    "    with output:\n",
+    "        clear_output()\n",
+    "        try:\n",
+    "            # Read inputs\n",
+    "            profile_name = profile_input.value.strip()\n",
+    "            table_name = table_input.value.strip()\n",
+    "            partition_value = partition_key_input.value.strip()\n",
+    "            sort_key_prefix = sort_key_prefix_input.value.strip()\n",
     "\n",
-    "# Paginate through the results\n",
-    "while True:\n",
-    "    if last_evaluated_key:\n",
-    "        response = table.query(\n",
-    "            KeyConditionExpression=boto3.dynamodb.conditions.Key('SupplierID').eq(partition_key),\n",
-    "            # FilterExpression=filter_expression,\n",
-    "            ExclusiveStartKey=last_evaluated_key\n",
-    "        )\n",
-    "    else:\n",
-    "        response = table.query(\n",
-    "            KeyConditionExpression=boto3.dynamodb.conditions.Key('SupplierID').eq(partition_key),\n",
-    "            # FilterExpression=filter_expression\n",
-    "        )\n",
-    "    \n",
-    "    # Count the number of records in this page\n",
-    "    record_count += response['Count']\n",
-    "    \n",
-    "    # Check if there's more data to fetch\n",
-    "    last_evaluated_key = response.get('LastEvaluatedKey')\n",
-    "    if not last_evaluated_key:\n",
-    "        break\n",
+    "            # Initialize boto3 session and DynamoDB table\n",
+    "            session = boto3.Session(profile_name=profile_name)\n",
+    "            dynamodb = session.resource('dynamodb')\n",
+    "            table = dynamodb.Table(table_name)\n",
     "\n",
-    "print(f\"Total number of records: {record_count}\")"
+    "            # Initialize pagination vars\n",
+    "            record_count = 0\n",
+    "            last_evaluated_key = None\n",
+    "\n",
+    "            # Prepare KeyConditionExpression\n",
+    "            key_cond = Key('SupplierID').eq(partition_value)\n",
+    "            if sort_key_prefix:\n",
+    "                key_cond = key_cond & Key('Version').begins_with(sort_key_prefix)\n",
+    "\n",
+    "            # Paginate through results\n",
+    "            while True:\n",
+    "                if last_evaluated_key:\n",
+    "                    response = table.query(\n",
+    "                        KeyConditionExpression=key_cond,\n",
+    "                        ExclusiveStartKey=last_evaluated_key\n",
+    "                    )\n",
+    "                else:\n",
+    "                    response = table.query(\n",
+    "                        KeyConditionExpression=key_cond\n",
+    "                    )\n",
+    "\n",
+    "                record_count += response['Count']\n",
+    "\n",
+    "                # Print fetched items for this page\n",
+    "                for item in response.get('Items', []):\n",
+    "                    print(item)\n",
+    "\n",
+    "                last_evaluated_key = response.get('LastEvaluatedKey')\n",
+    "                if not last_evaluated_key:\n",
+    "                    break\n",
+    "\n",
+    "            print(f\"\\nTotal number of records fetched: {record_count}\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "\n",
+    "run_button.on_click(run_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display widgets and output area\n",
+    "display(widgets.HTML(\"<b>Enter DynamoDB Query Parameters:</b>\"))\n",
+    "display(profile_input, table_input, partition_key_input, sort_key_prefix_input, run_button, output)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
