--- a/CountDynamoDB/countDynamoDB.ipynb
+++ b/CountDynamoDB/countDynamoDB.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "from boto3.dynamodb.conditions import Key, Attr\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output"
+    "from IPython.display import display as ipy_display, clear_output as ipy_clear_output"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_query(b):\n",
     "    with output:\n",
-    "        clear_output()\n",
+    "        ipy_clear_output()\n",
     "        try:\n",
     "            # Read inputs\n",
     "            profile_name = profile_input.value.strip()\n",
@@ -93,20 +93,20 @@
     "\n",
     "                record_count += response['Count']\n",
     "\n",
-    "                # Print fetched items for this page\n",
-    "                for item in response.get('Items', []):\n",
-    "                    print(item)\n",
+    "                # Show progress\n",
+    "                ipy_clear_output(wait=True)\n",
+    "                ipy_display(f\"Counting... Records so far: {record_count}\")\n",
     "\n",
     "                last_evaluated_key = response.get('LastEvaluatedKey')\n",
     "                if not last_evaluated_key:\n",
     "                    break\n",
     "\n",
-    "            print(f\"\\nTotal number of records fetched: {record_count}\")\n",
+    "            ipy_clear_output(wait=True)\n",
+    "            ipy_display(f\"✅ Total number of records fetched: {record_count}\")\n",
     "\n",
     "        except Exception as e:\n",
-    "            print(f\"Error: {e}\")\n",
-    "\n",
-    "run_button.on_click(run_query)"
+    "            ipy_clear_output(wait=True)\n",
+    "            ipy_display(f\"❌ Error: {e}\")\n"
    ]
   },
   {
@@ -115,15 +115,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display widgets and output area\n",
-    "display(widgets.HTML(\"<b>Enter DynamoDB Query Parameters:</b>\"))\n",
-    "display(profile_input, table_input, partition_key_input, sort_key_prefix_input, run_button, output)"
+    "run_button.on_click(run_query)\n",
+    "ipy_display(widgets.HTML(\"<b>Enter DynamoDB Query Parameters:</b>\"))\n",
+    "ipy_display(profile_input, table_input, partition_key_input, sort_key_prefix_input, run_button, output)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "3.8.18",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
