Addition to scripts added

--- a/CountDynamoDB/countDynamoDB.ipynb
+++ b/CountDynamoDB/countDynamoDB.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "from boto3.dynamodb.conditions import Key, Attr\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display as ipy_display, clear_output as ipy_clear_output"
+    "from IPython.display import display as ipy_display, clear_output as ipy_clear_output\n"
    ]
   },
   {
@@ -28,17 +28,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Widgets for user inputs\n",
-    "profile_input = widgets.Text(description=\"AWS Profile:\", placeholder=\"e.g., musarisaas\")\n",
-    "table_input = widgets.Text(description=\"Table Name:\", placeholder=\"e.g., CoreUser\")\n",
-    "partition_key_input = widgets.Text(description=\"Partition Key:\", placeholder=\"e.g., PEPSICO-PRE\")\n",
-    "sort_key_prefix_input = widgets.Text(description=\"Sort Key Prefix (optional):\", placeholder=\"e.g., 2024\")\n",
-    "run_button = widgets.Button(description=\"Run Query\", button_style=\"success\")\n",
+    "profile_input = widgets.Text(\n",
+    "    description=\"AWS Profile:\", \n",
+    "    placeholder=\"e.g., musarisaas\",\n",
+    "    style={'description_width': '150px'}\n",
+    ")\n",
+    "table_input = widgets.Text(\n",
+    "    description=\"Table Name:\", \n",
+    "    placeholder=\"e.g., CoreUser\",\n",
+    "    style={'description_width': '150px'}\n",
+    ")\n",
+    "\n",
+    "# Textarea for bulk paste + individual inputs\n",
+    "partition_keys_textarea = widgets.Textarea(\n",
+    "    description=\"Partition Keys:\",\n",
+    "    placeholder=\"Paste multiple values (one per line) or use buttons below to add individually\",\n",
+    "    style={'description_width': '150px'},\n",
+    "    rows=5,\n",
+    "    layout=widgets.Layout(width='600px')\n",
+    ")\n",
+    "\n",
+    "# Dynamic partition key inputs\n",
+    "partition_key_list = []\n",
+    "partition_keys_container = widgets.VBox([])\n",
+    "\n",
+    "def add_partition_key(b=None):\n",
+    "    \"\"\"Add a new partition key input field\"\"\"\n",
+    "    new_input = widgets.HBox([\n",
+    "        widgets.Text(\n",
+    "            placeholder=\"e.g., PEPSICO-PRE\",\n",
+    "            layout=widgets.Layout(width='400px')\n",
+    "        ),\n",
+    "        widgets.Button(\n",
+    "            description=\"❌\",\n",
+    "            button_style='danger',\n",
+    "            layout=widgets.Layout(width='40px')\n",
+    "        )\n",
+    "    ])\n",
+    "    \n",
+    "    # Add remove functionality\n",
+    "    remove_button = new_input.children[1]\n",
+    "    def remove_this_key(b):\n",
+    "        partition_key_list.remove(new_input)\n",
+    "        update_partition_keys_display()\n",
+    "    remove_button.on_click(remove_this_key)\n",
+    "    \n",
+    "    partition_key_list.append(new_input)\n",
+    "    update_partition_keys_display()\n",
+    "\n",
+    "def update_partition_keys_display():\n",
+    "    \"\"\"Update the display of partition key inputs\"\"\"\n",
+    "    if partition_key_list:\n",
+    "        partition_keys_container.children = partition_key_list\n",
+    "    else:\n",
+    "        partition_keys_container.children = [\n",
+    "            widgets.HTML(\"<i>No individual keys added. Use the text area above or click 'Add Single Key'.</i>\")\n",
+    "        ]\n",
+    "\n",
+    "# Buttons for partition key management\n",
+    "add_partition_button = widgets.Button(\n",
+    "    description=\"+ Add Single Key\",\n",
+    "    button_style='info',\n",
+    "    icon='plus',\n",
+    "    layout=widgets.Layout(width='150px')\n",
+    ")\n",
+    "add_partition_button.on_click(add_partition_key)\n",
+    "\n",
+    "clear_all_button = widgets.Button(\n",
+    "    description=\"Clear All\",\n",
+    "    button_style='warning',\n",
+    "    icon='trash',\n",
+    "    layout=widgets.Layout(width='150px')\n",
+    ")\n",
+    "\n",
+    "def clear_all_keys(b):\n",
+    "    \"\"\"Clear all partition key inputs\"\"\"\n",
+    "    partition_key_list.clear()\n",
+    "    partition_keys_textarea.value = \"\"\n",
+    "    update_partition_keys_display()\n",
+    "\n",
+    "clear_all_button.on_click(clear_all_keys)\n",
+    "\n",
+    "sort_key_prefix_input = widgets.Text(\n",
+    "    description=\"Sort Key Prefix:\", \n",
+    "    placeholder=\"e.g., 2024 (optional)\",\n",
+    "    style={'description_width': '150px'}\n",
+    ")\n",
+    "\n",
+    "run_button = widgets.Button(\n",
+    "    description=\"Run Query\", \n",
+    "    button_style=\"success\",\n",
+    "    icon='play',\n",
+    "    layout=widgets.Layout(width='150px')\n",
+    ")\n",
     "output = widgets.Output()"
    ]
   },
@@ -51,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,71 +146,231 @@
     "    with output:\n",
     "        ipy_clear_output()\n",
     "        try:\n",
-    "            # Read inputs\n",
+    "            # Validate inputs\n",
     "            profile_name = profile_input.value.strip()\n",
     "            table_name = table_input.value.strip()\n",
-    "            partition_value = partition_key_input.value.strip()\n",
     "            sort_key_prefix = sort_key_prefix_input.value.strip()\n",
     "\n",
+    "            # Collect partition key values from BOTH textarea and individual inputs\n",
+    "            partition_values = []\n",
+    "            \n",
+    "            # From textarea (support pasted values)\n",
+    "            textarea_values = [v.strip() for v in partition_keys_textarea.value.split('\\n') if v.strip()]\n",
+    "            partition_values.extend(textarea_values)\n",
+    "            \n",
+    "            # From individual input fields\n",
+    "            for key_input in partition_key_list:\n",
+    "                value = key_input.children[0].value.strip()\n",
+    "                if value:  # Only add non-empty values\n",
+    "                    partition_values.append(value)\n",
+    "            \n",
+    "            # Remove duplicates while preserving order\n",
+    "            seen = set()\n",
+    "            partition_values = [x for x in partition_values if not (x in seen or seen.add(x))]\n",
+    "\n",
+    "            if not profile_name or not table_name:\n",
+    "                ipy_display(\"❌ Error: AWS Profile and Table Name are required.\")\n",
+    "                return\n",
+    "            \n",
+    "            if not partition_values:\n",
+    "                ipy_display(\"❌ Error: At least one partition key value is required.\")\n",
+    "                ipy_display(\"💡 Tip: Paste values in the text area (one per line) or use '+ Add Single Key' button.\")\n",
+    "                return\n",
+    "\n",
+    "            ipy_display(\"🔄 Connecting to DynamoDB...\")\n",
+    "            \n",
     "            # Initialize boto3 session and DynamoDB table\n",
     "            session = boto3.Session(profile_name=profile_name)\n",
     "            dynamodb = session.resource('dynamodb')\n",
     "            table = dynamodb.Table(table_name)\n",
     "\n",
-    "            # Initialize pagination vars\n",
-    "            record_count = 0\n",
-    "            last_evaluated_key = None\n",
-    "\n",
-    "            # Prepare KeyConditionExpression\n",
-    "            key_cond = Key('SupplierID').eq(partition_value)\n",
-    "            if sort_key_prefix:\n",
-    "                key_cond = key_cond & Key('Version').begins_with(sort_key_prefix)\n",
-    "\n",
-    "            # Paginate through results\n",
-    "            while True:\n",
-    "                if last_evaluated_key:\n",
-    "                    response = table.query(\n",
-    "                        KeyConditionExpression=key_cond,\n",
-    "                        ExclusiveStartKey=last_evaluated_key\n",
-    "                    )\n",
-    "                else:\n",
-    "                    response = table.query(\n",
-    "                        KeyConditionExpression=key_cond\n",
-    "                    )\n",
-    "\n",
-    "                record_count += response['Count']\n",
-    "\n",
-    "                # Show progress\n",
-    "                ipy_clear_output(wait=True)\n",
-    "                ipy_display(f\"Counting... Records so far: {record_count}\")\n",
-    "\n",
-    "                last_evaluated_key = response.get('LastEvaluatedKey')\n",
-    "                if not last_evaluated_key:\n",
-    "                    break\n",
+    "            # Get table key schema dynamically\n",
+    "            ipy_display(\"🔍 Detecting table schema...\")\n",
+    "            table.load()  # Load table metadata\n",
+    "            key_schema = {item['AttributeName']: item['KeyType'] \n",
+    "                         for item in table.key_schema}\n",
+    "            \n",
+    "            # Find partition and sort key names\n",
+    "            partition_key_name = next(name for name, key_type in key_schema.items() \n",
+    "                                     if key_type == 'HASH')\n",
+    "            sort_key_name = next((name for name, key_type in key_schema.items() \n",
+    "                                 if key_type == 'RANGE'), None)\n",
     "\n",
     "            ipy_clear_output(wait=True)\n",
-    "            ipy_display(f\"✅ Total number of records fetched: {record_count}\")\n",
+    "            ipy_display(f\"📊 Table: {table_name}\")\n",
+    "            ipy_display(f\"🔑 Partition Key: '{partition_key_name}'\")\n",
+    "            ipy_display(f\"📝 Querying {len(partition_values)} partition value(s):\")\n",
+    "            for pv in partition_values:\n",
+    "                ipy_display(f\"   - {pv}\")\n",
+    "            if sort_key_name:\n",
+    "                if sort_key_prefix:\n",
+    "                    ipy_display(f\"🔑 Sort Key: '{sort_key_name}' begins_with '{sort_key_prefix}'\")\n",
+    "                else:\n",
+    "                    ipy_display(f\"🔑 Sort Key: '{sort_key_name}' (no filter applied)\")\n",
+    "            ipy_display(\"\\n\" + \"=\"*60)\n",
     "\n",
+    "            # Initialize overall counters\n",
+    "            total_record_count = 0\n",
+    "            total_page_count = 0\n",
+    "            partition_results = {}\n",
+    "\n",
+    "            # Query each partition key value\n",
+    "            for idx, partition_value in enumerate(partition_values, 1):\n",
+    "                ipy_clear_output(wait=True)\n",
+    "                ipy_display(f\"📊 Table: {table_name}\")\n",
+    "                ipy_display(f\"🔄 Processing partition {idx}/{len(partition_values)}: '{partition_value}'\")\n",
+    "                ipy_display(\"=\"*60)\n",
+    "                \n",
+    "                # Initialize pagination vars for this partition\n",
+    "                record_count = 0\n",
+    "                page_count = 0\n",
+    "                last_evaluated_key = None\n",
+    "\n",
+    "                # Prepare KeyConditionExpression\n",
+    "                key_cond = Key(partition_key_name).eq(partition_value)\n",
+    "                if sort_key_name and sort_key_prefix:\n",
+    "                    key_cond = key_cond & Key(sort_key_name).begins_with(sort_key_prefix)\n",
+    "\n",
+    "                # Paginate through results for this partition\n",
+    "                while True:\n",
+    "                    query_params = {\n",
+    "                        'KeyConditionExpression': key_cond,\n",
+    "                        'Limit': 1000\n",
+    "                    }\n",
+    "                    \n",
+    "                    if last_evaluated_key:\n",
+    "                        query_params['ExclusiveStartKey'] = last_evaluated_key\n",
+    "\n",
+    "                    response = table.query(**query_params)\n",
+    "                    \n",
+    "                    items_in_page = response['Count']\n",
+    "                    record_count += items_in_page\n",
+    "                    page_count += 1\n",
+    "\n",
+    "                    # Show progress for this partition\n",
+    "                    ipy_clear_output(wait=True)\n",
+    "                    ipy_display(f\"📊 Table: {table_name}\")\n",
+    "                    ipy_display(f\"🔄 Processing partition {idx}/{len(partition_values)}: '{partition_value}'\")\n",
+    "                    ipy_display(f\"   Page {page_count} | Items: {items_in_page} | Subtotal: {record_count}\")\n",
+    "                    ipy_display(\"=\"*60)\n",
+    "\n",
+    "                    # Check if there are more pages\n",
+    "                    last_evaluated_key = response.get('LastEvaluatedKey')\n",
+    "                    if not last_evaluated_key:\n",
+    "                        break\n",
+    "\n",
+    "                # Store results for this partition\n",
+    "                partition_results[partition_value] = {\n",
+    "                    'records': record_count,\n",
+    "                    'pages': page_count\n",
+    "                }\n",
+    "                total_record_count += record_count\n",
+    "                total_page_count += page_count\n",
+    "\n",
+    "            # Display final results\n",
+    "            ipy_clear_output(wait=True)\n",
+    "            ipy_display(f\"📊 Table: {table_name}\")\n",
+    "            ipy_display(f\"🔑 Partition Key: '{partition_key_name}'\")\n",
+    "            if sort_key_name and sort_key_prefix:\n",
+    "                ipy_display(f\"🔑 Sort Key Filter: '{sort_key_name}' begins_with '{sort_key_prefix}'\")\n",
+    "            ipy_display(\"\\n\" + \"=\"*60)\n",
+    "            ipy_display(f\"✅ Query Complete!\")\n",
+    "            ipy_display(f\"\\n📈 OVERALL SUMMARY:\")\n",
+    "            ipy_display(f\"   Total Records: {total_record_count}\")\n",
+    "            ipy_display(f\"   Total Pages: {total_page_count}\")\n",
+    "            ipy_display(f\"   Partitions Queried: {len(partition_values)}\")\n",
+    "            \n",
+    "            if len(partition_values) > 1:\n",
+    "                ipy_display(f\"\\n📊 BREAKDOWN BY PARTITION:\")\n",
+    "                for partition_value, results in partition_results.items():\n",
+    "                    ipy_display(f\"   '{partition_value}':\")\n",
+    "                    ipy_display(f\"      Records: {results['records']}\")\n",
+    "                    ipy_display(f\"      Pages: {results['pages']}\")\n",
+    "\n",
+    "        except AttributeError:\n",
+    "            ipy_clear_output(wait=True)\n",
+    "            ipy_display(f\"❌ Error: AWS profile '{profile_name}' not found.\")\n",
+    "            ipy_display(\"💡 Check your AWS credentials configuration.\")\n",
     "        except Exception as e:\n",
     "            ipy_clear_output(wait=True)\n",
-    "            ipy_display(f\"❌ Error: {e}\")\n"
+    "            ipy_display(f\"❌ Error: {e}\")\n",
+    "            ipy_display(f\"🔍 Error Type: {type(e).__name__}\")\n",
+    "\n",
+    "run_button.on_click(run_query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98d3b56ad09446b7a140e322257cd2a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<h3>🔍 DynamoDB Query Counter</h3>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a51dab543d1c4f3cbfc997b4f2ae678a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<p>Query any DynamoDB table and count matching records.</p>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "baa3734288854254a00ea8ad439d39af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='AWS Profile:', placeholder='e.g., musarisaas', style=TextStyle(desc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "run_button.on_click(run_query)\n",
-    "ipy_display(widgets.HTML(\"<b>Enter DynamoDB Query Parameters:</b>\"))\n",
-    "ipy_display(profile_input, table_input, partition_key_input, sort_key_prefix_input, run_button, output)"
+    "# Display UI\n",
+    "ipy_display(widgets.HTML(\"<h3>🔍 DynamoDB Query Counter</h3>\"))\n",
+    "ipy_display(widgets.HTML(\"<p>Query any DynamoDB table and count matching records.</p>\"))\n",
+    "ipy_display(\n",
+    "    widgets.VBox([\n",
+    "        profile_input, \n",
+    "        table_input,\n",
+    "        widgets.HTML(\"<b>Option 1: Paste Multiple Values (one per line)</b>\"),\n",
+    "        partition_keys_textarea,\n",
+    "        widgets.HTML(\"<b>Option 2: Add Individual Keys</b>\"),\n",
+    "        widgets.HBox([add_partition_button, clear_all_button]),\n",
+    "        partition_keys_container,\n",
+    "        sort_key_prefix_input, \n",
+    "        run_button, \n",
+    "        output\n",
+    "    ], layout=widgets.Layout(padding='10px'))\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.8.18",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
